--- a/frontend/web/VoxApp/package.json
+++ b/frontend/web/VoxApp/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "~19.0.1",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/list": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-big-calendar": "^4.9.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
