--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ resources/
 __pycache__
 db.sqlite3
 media
+staticfiles/
 
 # Backup files # 
 *.bak 
@@ -234,3 +235,7 @@ db.sqlite3
 playground.py
 fixtures/
 country.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
