--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,62 @@
+Django==5.0.1
 aiohttp==3.9.1
 aiosignal==1.3.1
 asgiref==3.7.2
 attrs==23.2.0
+beautifulsoup4==4.12.2
 boto3==1.34.7
 botocore==1.34.7
-certifi==2023.7.22
-cffi @ file:///private/tmp/cffi-20231015-5876-1oubxev/cffi-1.16.0
+certifi==2023.11.17
 charset-normalizer==3.3.2
-distlib==0.3.7
-Django==5.0
+
 django-cors-headers==4.3.1
+django-countries==7.5.1
 django-filter==23.5
+django-hosts==6.0
+django-pandas==0.6.6
+django-resized==1.0.2
 django-storages==1.14.2
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-docutils @ file:///private/tmp/docutils-20231016-5777-1hh809k/docutils-0.20.1
-dropbox==11.36.2
-filelock==3.13.1
+djangorestframework-simplejwt==5.3.1
 frozenlist==1.4.1
 geoip2==4.8.0
+greenlet==3.0.3
 gunicorn==21.2.0
+html5lib==1.1
 idna==3.6
+iniconfig==2.0.0
 jmespath==1.0.1
 Markdown==3.5.1
 maxminddb==2.5.1
 multidict==6.0.4
 packaging==23.2
+pandas==2.1.4
 Pillow==10.1.0
-pipenv==2023.10.24
-platformdirs==3.11.0
-ply==3.11
+playwright==1.41.1
+pluggy==1.4.0
 psycopg2==2.9.9
 pycodestyle==2.11.1
-pycparser @ file:///private/tmp/pycparser-20231013-6010-ksuqao/pycparser-2.21
+pycountry==23.12.11
+pyee==11.0.1
 PyJWT==2.8.0
+pytest==7.4.4
+pytest-base-url==2.0.0
+pytest-playwright==0.4.3
 python-dateutil==2.8.2
+python-slugify==8.0.2
 pytz==2023.3.post1
-pywatchman==1.4.1
 requests==2.31.0
-rest-framework-simplejwt==0.0.2
 s3transfer==0.10.0
+sentry-sdk==1.39.2
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
-stone==3.3.1
+text-unidecode==1.3
 toml==0.10.2
+typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.0.7
-virtualenv==20.24.6
+webencodings==0.5.1
 whitenoise==6.6.0
+Wikipedia-API==0.6.0
 yarl==1.9.4
