--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: eu-west-2
+  AWS_REGION: us-east-2
   ECR_REPOSITORY: ci_cd
   ECS_SERVICE: VoxService
   ECS_CLUSTER: VoxCluster
