--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,5 +6,5 @@ contact_links:
 
   - name: Ask Question  
     url: https://voxmissa.com/community_center/
-    about: Ask a Question from the Community Center > [info@vox](mailto:info@voxmissa.com?subject=Security)
+    about: Ask a Question from the Community Center : **[info@vox](mailto:info@voxmissa.com?subject=Security)**
   
