--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,6 +5,6 @@ contact_links:
     about: Request Feature or Report a Bug
 
   - name: Ask Question  
-    url: https://voxmissa.com/community_center/
+    url: mailto:info@voxmissa.com
     about: Email to **[info@voxmissa.com](mailto:info@voxmissa.com)**
   
