--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,10 +1,10 @@
 name: Add issues to release testing project
 
-on:
-  issues:
-    types:
-      - opened
-
+# on:
+#   issues:
+#     types:
+#       - opened
+on: workflow_dispatch
 jobs:
   add-to-project:
     name: Add issue to project
